# Rydit_Engine

./: .git_commit_message.txt  .gitignore  .rcloneignore  .sync_drive.log.binaries  .sync_exclude  ADVERTENCIAS.md  ANALISIS_CRITICO_V0.1.8.txt  ASSETS_MANAGER_V0.5.0.md  AUDIO_PARTICLES_MODULES_V0.5.1.md  BACKUP_INSTRUCCIONES_V0.5.1.md  BENCHMARK_v0.1.2.md  BITACORA.md  BREAK_SESION_25_v0.1.8.txt  CHANGELOG_v0.1.3.md  CHANGELOG_v0.1.8.md  CIERRE_SESION_25.txt  CLAVE_INPUT_SDL2.md  COMANDOS_V0.10.6.md  CONTEXTO_v0.5.0.md  CONTRIBUTING.md  Cargo.toml  DATOS_EXACTOS_V0.5.1.md  DESCRIPCION_TWITTER.md  DESCRIPCION_YOUTUBE.md  DEUDAS_TECNICAS_V0.7.1.1.md  DIAGNOSTICO_SESION_26_V0.1.8.md  DISCORD_SERVER.md  ESTADO_COMPLETO_V0.11.0.md  ESTADO_FINAL_V0.10.6.md  ESTRUCTURA.md  EVALUACION_PROYECTO.md  EVALUACION_PROYECTO_v0.4.1.md  EVALUACION_SCIENCE_ANIM.md  FIXES_COMPLETADOS_V0.11.0.md  GRAFICOS_V0.5.0.md  GRAN_PLAN.md  GUIA_BINARIOS_GRAFICOS_TERMUX_X11.md  GUIA_USUARIO.md  GUIA_USUARIO_V0.11.0.md  GUIA_USUARIO_V0.11.2.md  (+90 more)
.cargo/: config.toml
archive/: README.md
backup_seguro_v0.7.3_physics_extracted/: Cargo.toml
backup_seguro_v0.7.3_science_extracted/: Cargo.toml
backup_seguro_v0.7.3_split/: README.md
context/: README.md
crates/events-ry/: Cargo.toml  README.md
crates/events-ry/src/: backend.rs  input_event.rs  key_code.rs  lib.rs  manager.rs  sdl2_backend.rs  shell.rs  text_input.rs
crates/lizer/: Cargo.toml
crates/lizer/benches/: bench_lizer.rs
crates/lizer/src/: lib.rs
crates/migui/: Cargo.toml  build.rs
crates/migui/src/: backend_sdl2.rs  font_native.rs  layout.rs  lib.rs
crates/ry-anim/: Cargo.toml  README.md
crates/ry-anim/src/: action_assets.rs  anim_particles.rs  disney.rs  lib.rs  science_anim.rs
crates/ry-art/: Cargo.toml
crates/ry-art/src/: lib.rs
crates/ry-backend/: Cargo.toml
crates/ry-config/: Cargo.toml
crates/ry-config/src/: lib.rs
crates/ry-core/: Cargo.toml  README.md
crates/ry-core/src/: assets.rs  lib.rs
crates/ry-editor/: Cargo.toml
crates/ry-editor/src/: editor_state.rs  lib.rs  viewport_controller.rs  viewport_manager.rs
crates/ry-gfx/: Cargo.toml  README.md  build.rs
crates/ry-gfx/examples/: demo.rs  demo_render_queue.rs
crates/ry-gfx/shaders/: fragment.glsl  fragment_test.glsl  fsr_sharpen.glsl  fsr_upscale.glsl  vertex.glsl
crates/ry-gfx/src/: audio_mixer.rs  audio_sdl2.rs  backend_sdl2.rs  camera.rs  ecs_render.rs  emoji_atlas.rs  font_sdl2.rs  font_system.rs  fsr.rs  gpu_instancing.rs  gpu_particles.rs  input_sdl2.rs  lib.rs  particles.rs  render_queue.rs  sdl2_ffi.rs  sdl2_helpers.rs  transitions.rs  viewports.rs
crates/ry-gfx/src/toolkit/: mod.rs  theme.rs
crates/ry-gfx/src/toolkit/widgets/: button.rs  label.rs  mod.rs  panel.rs
crates/ry-god/: Cargo.toml
crates/ry-god/src/: bench.rs  lib.rs
crates/ry-god/src/tests/: revelation.rs
crates/ry-lexer/: Cargo.toml  README.md
crates/ry-lexer/src/: lexer.rs  lib.rs  token.rs
crates/ry-loader/: Cargo.toml  README.md
crates/ry-loader/src/: compressor.rs  lib.rs
crates/ry-parser/: Cargo.toml  README.md
crates/ry-parser/src/: lib.rs  parser.rs
crates/ry-physics/: Cargo.toml  README.md
crates/ry-physics/src/: lib.rs
crates/ry-rs/: Cargo.toml
crates/ry-rs/examples/: demo_rybot_gui.rs
crates/ry-rs/src/: cli.rs  config.rs  executor.rs  interpreter.rs  json_helpers.rs  lazos.rs  lib.rs  main.rs  main.rs.backup_group1  main.rs.backup_v2  module.rs  repl.rs  rybot_stub.rs
crates/ry-rs/src/disabled/: particles_module.rs
crates/ry-rs/src/eval/: mod.rs  mod.rs.backup_v2
crates/ry-rs/src/modules/: assets.rs  audio.rs  camera.rs  collision.rs  csv.rs  entity.rs  input_ime.rs  input_map.rs  level.rs  mod.rs  particles.rs  physics.rs  save.rs  script_particles.rs  tilemap.rs  window.rs
crates/ry-science/: Cargo.toml  README.md
crates/ry-science/src/: lib.rs
crates/ry-stream/: Cargo.toml  README.md
crates/ry-stream/resources/: portal.html
crates/ry-stream/src/: client.rs  lib.rs  server.rs
crates/ry-system-ry/: Cargo.toml
crates/ry-test/: Cargo.toml
crates/ry-tilemap/: Cargo.toml
crates/ry-tilemap/src/: lib.rs
crates/ry-vm/: Cargo.toml
crates/ry-vm/src/: compiler.rs  lib.rs  opcodes.rs
crates/rydit-gfx/: Cargo.toml  build.rs
crates/rydit-gfx/examples/: demo.rs
crates/rydit-gfx/shaders/: fragment.glsl
crates/rydit-gfx/src/: audio_sdl2.rs  backend_sdl2.rs  ecs_render.rs  font_sdl2.rs  fsr.rs  gpu_instancing.rs  input_sdl2.rs  lib.rs  particles.rs  sdl2_ffi.rs
crates/rydit-gfx/src/toolkit/widgets/: panel.rs
crates/rydit-physics/: Cargo.toml
crates/rydit-physics/src/: lib.rs
crates/rydit-rs/: Cargo.toml
crates/rydit-rs/src/: cli.rs  config.rs  config_parser.rs  executor.rs  lazos.rs  lib.rs  main.rs  module.rs  repl.rs
crates/rydit-rs/src/bindings/: mod.rs
crates/rydit-rs/src/eval/: mod.rs
crates/rydit-rs/src/modules/: assets.rs  audio.rs  camera.rs  collision.rs  csv.rs  entity.rs  input_ime.rs  input_map.rs  level.rs  mod.rs  particles.rs  physics.rs  window.rs
crates/rydit-rs/src/rybot/: mod.rs  registry.rs
crates/rydit-rs/src/tests/: mod.rs
crates/rydit-science/: Cargo.toml
crates/rydit-science/src/: lib.rs
crates/rydit-script/: Cargo.toml
crates/rydit-script/src/: lib.rs
crates/toolkit-ry/: Cargo.toml  README.md
crates/v-shield/: Cargo.toml  README.md
crates/v-shield/src/: lib.rs  platform_sync.rs
crates/v-shield/src/platform/: mod.rs
crates/v-shield/src/sync/: mod.rs  mutex.rs  rwlock.rs
demos/: README_ANIMACION.md  demo_assets_audio_v0.8.5.rydit  demo_assets_simple_v0.8.5.rydit  demo_bezier_simple.rydit  demo_disparo_simple_v0.8.4.rydit  demo_draw_simple_v0.8.5.rydit  demo_fisica_simple.rydit  demo_formas.rydit  demo_fuego_estrellas_v0.8.5.rydit  demo_ilusiones.rydit  demo_ilusiones_minimo.rydit  demo_ilusiones_simple.rydit  demo_input_mouse_v0.8.4.rydit  demo_json.rydit  demo_migui_v0.5.0.rydit  demo_movimiento_mouse_v0.8.4.rydit  demo_ok.rydit  demo_particulas_continuas_v0.8.5.rydit  demo_particulas_v0.8.4.rydit  demo_random.rydit  demo_rigidbody.rydit  demo_shapes.rydit  (+34 more)
(+510 files in other folders)
