[workspace]
resolver = "3"
members = [
    "crates/lizer",
    "crates/v-shield",
    "crates/blast-core",
    "crates/ry-core",
    "crates/ry-science",
    "crates/ry-physics",
    "crates/ry-anim",
    "crates/ry-rs",
    "crates/ry-gfx",
    "crates/migui",
    "crates/ry-loader",
    "crates/ry-script",
    "crates/ry-stream",  # 🆕 v0.11.2: LAN streaming (WebSocket + mDNS + Portal)
    "crates/ry-ecs",   # ✅ v0.10.0: ECS (bevy_ecs + N-Body)
    "crates/ry-test", "crates/ry-lexer", "crates/ry-parser", "crates/ry-vm",  # 🆕 v0.11.1: Tests simplificados (Nivel 1, 2, 3)
]

# =============================================================================
# SHIELD PROJECT v0.0.1 - Pre-Alpha
# =============================================================================
# Esta es una versión temprana de prueba de concepto.
# El lenguaje RyDit está en desarrollo inicial.
# =============================================================================

# Perfil optimizado para desarrollo rápido
[profile.dev]
debug = false
opt-level = 1
incremental = true
codegen-units = 1      # Menos paralelismo = menos RAM

# Perfil de release con optimizaciones máximas
[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true  # Eliminar símbolos de debug (reduce ~100 KB)
 
