[workspace]
resolver = "3"
members = [
    "crates/lizer",
    "crates/v-shield",
    "crates/blast-core",
    "crates/ry-core",
    "crates/ry-science",
    "crates/ry-physics",
    "crates/ry-anim",
    "crates/ry-rs",
    "crates/ry-gfx",
    "crates/migui",
    "crates/ry-loader",
    "crates/ry-tilemap",
    "crates/ry-script",
    "crates/ry-stream",  # 🆕 v0.11.2: LAN streaming (WebSocket + mDNS + Portal)
    "crates/ry-lexer", "crates/ry-parser", "crates/ry-vm",  # 🆕 v0.11.1: Tests simplificados (Nivel 1, 2, 3)
    "crates/ry-god",   # 🆕 v0.12.0: Industrial Security & Efficiency Framework
    "crates/toolkit-ry", # 🆕 v0.13.0: UI Toolkit para juegos (HUD, menús, inventario)
    "crates/ry3d-gfx",   # 🆕 v0.14.0: 3D Graphics (primitives, camera3D, models)
    "crates/ry-backend",   # Dual backend: raylib drawing + SDL2 input/TTF
    "crates/ry-config",    # 🆕 v0.14.0: Config parser (entities, levels)
    "crates/events-ry",  # 🆕 v0.13.0: Input unificado + Text Input + Shell (corazón del editor)
    "crates/ry-input",   # 🆕 v0.19.0: Input map configurable (.rydit-input)
    "crates/rybot",       # 🆕 v0.19.0: Motor central — orquesta crates
    "crates/postfx-ry",   # 🆕 v0.20.0: Post-processing effects (bloom, blur, color grade)
    "crates/ry-windows",  # 🆕 v0.20.0: Unified window management (SDL2 + Raylib, multiplatform)
]

# =============================================================================
# SHIELD PROJECT v0.0.1 - Pre-Alpha
# =============================================================================
# Esta es una versión temprana de prueba de concepto.
# El lenguaje RyDit está en desarrollo inicial.
# =============================================================================

# Perfil optimizado para desarrollo rápido
[profile.dev]
debug = false
opt-level = 1
incremental = true
codegen-units = 1      # Menos paralelismo = menos RAM

# Perfil de release con optimizaciones máximas
[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true  # Eliminar símbolos de debug (reduce ~100 KB)
 
