[package]
name = "migui"
version = "0.4.1"
edition = "2021"
description = "Immediate Mode GUI puro en Rust para Ry-Dit"
authors = ["Shield Project"]

[dependencies]
# Sin dependencias por defecto - migui es puro Rust!
sdl2 = { version = "0.37", optional = true }  # Backend SDL2 opcional
ab_glyph = "0.2"  # ✅ v0.10.10: Fuentes nativas Rust (sin FFI)
image = "0.25"  # ✅ v0.10.10: Render de texto a imagen

[build-dependencies]

[features]
default = []
sdl2 = ["dep:sdl2"]  # Activar con: cargo build --features sdl2
