[package]
name = "ry-anim"
version = "0.7.34"
edition = "2021"
description = "Animation module for Ry - Easing functions, Squash & Stretch, Disney principles"
license = "MIT"
repository = "https://github.com/lapumlbb18-blip/Rydit"
homepage = "https://github.com/lapumlbb18-blip/Rydit"
documentation = "https://docs.rs/ry-anim"
readme = "../../README.md"
keywords = ["animation", "easing", "game-engine", "disney", "interpolation"]
categories = ["game-development", "graphics"]

[dependencies]
ry-core = { version = "0.8.2", path = "../ry-core" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
