[package]
name = "ry-anim"
version = "0.12.0"
edition = "2021"
description = "Animation library implementing 12 Disney principles, visual effects, optical illusions, and science animations"
license = "MIT"
repository = "https://github.com/lapumlbb18-blip/Ry-dit"
homepage = "https://github.com/lapumlbb18-blip/Ry-dit"
documentation = "https://docs.rs/ry-anim"
readme = "README.md"
keywords = ["animation", "easing", "game-engine", "disney", "sprite"]
categories = ["game-development", "graphics", "multimedia"]

[dependencies]
ry-core = { version = "0.8.2", path = "../ry-core" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
