[package]
name = "ry-backend"
version = "0.1.0"
edition = "2021"
description = "Dual backend (raylib + SDL2) for game engines - Multiplatform with TTF, input, audio"
license = "MIT"
repository = "https://github.com/lapumlbb18-blip/Ry-dit"
documentation = "https://docs.rs/ry-backend"
keywords = ["game-engine", "backend", "raylib", "sdl2", "multiplatform"]
categories = ["game-engines", "api-bindings"]

[dependencies]
# Backend Raylib - Drawing 2D/3D + Shapes (opcional)
raylib = { version = "5.5.1", default-features = false, features = ["nobuild"], optional = true }

# Backend SDL2 - Input + Audio + Assets + TTF profesional (opcional)
sdl2 = { version = "0.37", features = ["ttf", "image", "mixer"], optional = true }

# Glue OpenGL FFI (solo si raylib está activo)
gl = { version = "0.14.0", optional = true }

[features]
# Por defecto: raylib drawing + SDL2 input/texto (recomendado)
default = ["dual-backend"]

# Backend raylib solo (drawing 2D/3D + text gaming)
raylib-only = ["dep:raylib", "dep:gl"]

# Backend SDL2 solo (input + audio + assets + TTF profesional)
sdl2-only = ["dep:sdl2"]

# Dual: raylib para drawing + SDL2 para input/audio/texto TTF profesional (recomendado desktop)
dual-backend = ["dep:raylib", "dep:sdl2", "dep:gl"]

# Mobile: raylib drawing + SDL2 input (Termux-X11 / Zink / VirGL)
mobile-hybrid = ["dep:raylib", "dep:sdl2", "dep:gl"]
