[package]
name = "ry-god"
version = "0.1.0"
edition = "2021"
description = "Industrial-grade security & efficiency framework for Ry-Dit. Sandboxed execution, audit logging, memory limits, and zero-crash guarantees."
license = "MIT"
repository = "https://github.com/lapumlbb18-blip/Ry-dit"
keywords = ["security", "sandbox", "low-end", "industrial", "audit"]
categories = ["development-tools", "security"]

[dependencies]
# ry-core, ry-lexer, ry-parser, ry-vm se publicarán después
# ry-god v0.1.0 es framework independiente de supervisión

# Zero dependencias externas innecesarias (filosofía low-end)

[features]
default = ["sandbox", "audit", "limits"]
sandbox = []       # Aislamiento de scripts
audit = []         # Logging de actividades
limits = []        # Límites de memoria/CPU
integration = []   # Tests con ry-* crates (requiere path deps)
