[package]
name = "ry-loader"
version = "0.8.2"
edition = "2021"
description = "Dynamic module loader for Ry - Hot reload and plugin system"
license = "MIT"
repository = "https://github.com/lapumlbb18-blip/Rydit"
keywords = ["game-engine", "android", "rust", "plugins", "hot-reload"]
categories = ["game-development"]

[dependencies]
ry-core = { path = "../ry-core", version = "0.8.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
libloading = "0.8"

[features]
default = []
dynamic-loading = []
