[package]
name = "ry-parser"
version = "0.1.0"
edition = "2021"
description = "Parser with error recovery for Ry"
license = "MIT"
repository = "https://github.com/lapumlbb18-blip/Rydit"
keywords = ["parser", "compiler", "ry", "game-engine", "error-recovery"]
categories = ["compilers", "game-engines", "parsing"]

[dependencies]
ry-lexer = { path = "../ry-lexer", version = "0.1.0" }

[dev-dependencies]
# Tests no requieren dependencias adicionales

[lib]
path = "src/lib.rs"
