[package]
name = "ry-physics"
version = "0.7.34"
edition = "2021"
description = "Physics simulations for Ry-Dit — projectile motion, gravity, N-body simulation"
license = "MIT"
repository = "https://github.com/lapumlbb18-blip/Ry-dit"
homepage = "https://github.com/lapumlbb18-blip/Ry-dit"
documentation = "https://docs.rs/ry-physics"
readme = "README.md"
keywords = ["physics", "gravity", "projectile", "n-body", "simulation"]
categories = ["game-development", "simulation", "science"]

[dependencies]
ry-core = { version = "0.8.2", path = "../ry-core" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
