[package]
name = "ry-rs"
version = "0.11.2"
edition = "2021"

[lib]
name = "ry_rs"
path = "src/lib.rs"

[dependencies]
ry-core = { path = "../ry-core" }
ry-config = { path = "../ry-config" }  # 🆕 v0.14.0: Config parser
ry-loader = { path = "../ry-loader" }
ry-science = { path = "../ry-science" }
ry-physics = { path = "../ry-physics" }
ry-anim = { path = "../ry-anim" }
events-ry = { path = "../events-ry" }  # 🆕 v0.13.0: Input unificado + TextInput + Shell
# 🗑️ ry-ecs eliminado v0.13.1
ry-vm = { path = "../ry-vm" }  # 🆕 v0.11.2: Bytecode VM
lizer = { path = "../lizer" }  # Wrapper backward compat
ry-lexer = { path = "../ry-lexer" }  # 🆕 v0.11.2
ry-parser = { path = "../ry-parser" }  # 🆕 v0.11.2
v-shield = { path = "../v-shield" }
blast-core = { path = "../blast-core" }
ry-gfx = { path = "../ry-gfx", features = ["migui"] }
ry3d-gfx = { path = "../ry3d-gfx" }
migui = { path = "../migui", features = ["sdl2"] }
ry-stream = { path = "../ry-stream" }  # 🆕 v0.11.2: LAN streaming
ry-input = { path = "../ry-input" }  # 🆕 v0.19.0: Input map configurable
rybot = { path = "../rybot" }  # 🆕 v0.19.0: Motor central
# rybot usa migui+sdl2, raylib nobuild — conflicto de linker en Android
# demo_rybot_gui se habilita cuando se resuelva el linking
raylib = { version = "5.5.1", default-features = false, features = ["nobuild"] }
gl = "0.14.0"
sdl2 = "0.37"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
regex = "1.10"
csv = "1.3"
ureq = { version = "2.9", features = ["json"] }
tungstenite = "0.21"

[[bin]]
name = "rydit-rs"
path = "src/main.rs"

[[bin]]
name = "demo_stream"
path = "src/bin/demo_stream.rs"

[[bin]]
name = "demo_militar"
path = "src/bin/demo_militar.rs"

[[bin]]
name = "demo_emoji_utf8"
path = "src/bin/demo_emoji_utf8.rs"

[[bin]]
name = "demo_audio_mixer"
path = "src/bin/demo_audio_mixer.rs"

[[bin]]
name = "demo_transitions"
path = "src/bin/demo_transitions.rs"

[[bin]]
name = "demo_3d_primitives"
path = "src/bin/demo_3d_primitives.rs"

[[bin]]
name = "demo_text_3d"
path = "src/bin/demo_text_3d.rs"

[[bin]]
name = "demo_lighting_2d"
path = "src/bin/demo_lighting_2d.rs"

[[bin]]
name = "demo_meteor_shower"
path = "src/bin/demo_meteor_shower.rs"

[[bin]]
name = "demo_war_spacio"
path = "src/bin/demo_war_spacio.rs"

[[bin]]
name = "demo_sdl2_raylib_fusion"
path = "src/bin/demo_sdl2_raylib_fusion.rs"

[[bin]]
name = "demo_3d_touch"
path = "src/bin/demo_3d_touch.rs"

[[bin]]
name = "demo_input_map"
path = "src/bin/demo_input_map.rs"
