[package]
name = "ry-science"
version = "0.7.34"
edition = "2021"
description = "Math, stats, and geometry for Ry-Dit — Bezier curves, statistics, optical illusions"
license = "MIT"
repository = "https://github.com/lapumlbb18-blip/Ry-dit"
homepage = "https://github.com/lapumlbb18-blip/Ry-dit"
documentation = "https://docs.rs/ry-science"
readme = "README.md"
keywords = ["bezier", "statistics", "geometry", "optical-illusions", "math"]
categories = ["game-development", "science", "mathematics"]

[dependencies]
ry-core = { version = "0.8.2", path = "../ry-core" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
