[package]
name = "ry-stream"
version = "0.1.0"
edition = "2021"
description = "LAN streaming server with WebSocket + embedded web portal for the Ry-Dit game engine"
license = "MIT"
repository = "https://github.com/lapumlbb18-blip/Ry-dit"
readme = "README.md"
keywords = ["streaming", "websocket", "lan", "json-rpc", "game-engine"]
categories = ["game-engines", "network-programming", "web-programming::websocket"]

[dependencies]
# ✅ EXISTENTES (ya están en workspace - 0KB extra)
tungstenite = "0.21"        # WebSocket client
serde_json = "1.0"          # JSON
serde = { version = "1.0", features = ["derive"] }

# 🆕 FUTURO (mDNS - opcional para v0.2.0)
# libmdns = "0.9"

[dev-dependencies]
# Tests no requieren dependencias extra
