[package]
name = "ry-test"
version = "0.11.1"
edition = "2021"
description = "Tests simplificados para Ry - Rybot integration"
authors = ["Ry Team"]
license = "MIT"

[dependencies]
# Crates internos (Núcleo)
ry-core = { path = "../ry-core" }
ry-anim = { path = "../ry-anim" }
ry-physics = { path = "../ry-physics" }
ry-science = { path = "../ry-science" }
lizer = { path = "../lizer" }
blast-core = { path = "../blast-core" }

# Testing
serde_json = "1.0"
