[package]
name = "rydit-gfx"
version = "0.10.7"
edition = "2021"
description = "RyDit Graphics Layer - SDL2 Backend + ECS + GPU Instancing"
links = "raylib"

[dependencies]
raylib = { version = "5.5.1", default-features = false, features = ["nobuild"] }
migui = { path = "../migui" }
rydit-ecs = { path = "../rydit-ecs" }  # ✅ v0.10.0: ECS integration
gl = "0.14.0"  # ✅ v0.10.1: FFI OpenGL para GPU Instancing
sdl2 = { version = "0.37", features = ["image", "ttf", "mixer"] }  # ✅ v0.10.7: Backend SDL2 completo
# sdl2_image separado causa conflicto de linking - usar solo features de sdl2

[build-dependencies]
pkg-config = "0.3"
