[package]
name = "rydit-physics"
version = "0.7.34"
edition = "2021"
description = "Physics module for RyDit - Projectile motion, Gravity, N-body simulation"
license = "MIT"
repository = "https://github.com/lapumlbb18-blip/Rydit_Engine"
homepage = "https://github.com/lapumlbb18-blip/Rydit_Engine"
documentation = "https://docs.rs/rydit-physics"
readme = "../../README.md"
keywords = ["physics", "gravity", "projectile", "simulation", "game-engine"]
categories = ["game-development", "simulation"]

[dependencies]
rydit-core = { version = "0.8.2", path = "../rydit-core" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
