[package]
name = "rydit-rs"
version = "0.6.2"
edition = "2021"

[dependencies]
lizer = { path = "../lizer" }
v-shield = { path = "../v-shield" }
blast-core = { path = "../blast-core" }
rydit-gfx = { path = "../rydit-gfx" }
migui = { path = "../migui" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
