[package]
name = "rydit-rs"
version = "0.10.1"
edition = "2021"

[dependencies]
rydit-core = { path = "../rydit-core" }
rydit-loader = { path = "../rydit-loader" }
rydit-science = { path = "../rydit-science" }
rydit-physics = { path = "../rydit-physics" }
rydit-anim = { path = "../rydit-anim" }
rydit-ecs = { path = "../rydit-ecs" }  # ✅ v0.10.0: ECS
lizer = { path = "../lizer" }
v-shield = { path = "../v-shield" }
blast-core = { path = "../blast-core" }
rydit-gfx = { path = "../rydit-gfx" }
migui = { path = "../migui" }
rydit-http = { path = "../rydit-http" }
raylib = { version = "5.5.1", default-features = false, features = ["nobuild"] }
gl = "0.14.0"  # ✅ v0.10.1: GPU Instancing
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
# Data science module (v0.7.1.3)
csv = "1.3"
# HTTP + WebSocket (v0.8.7)
ureq = { version = "2.9", features = ["json"] }
tungstenite = "0.21"

[[bin]]
name = "rydit-rs"
path = "src/main.rs"
