[package]
name = "rydit-rs"
version = "0.11.2"
edition = "2021"

[dependencies]
rydit-core = { path = "../rydit-core" }
rydit-loader = { path = "../rydit-loader" }
rydit-science = { path = "../rydit-science" }
rydit-physics = { path = "../rydit-physics" }
rydit-anim = { path = "../rydit-anim" }
rydit-ecs = { path = "../rydit-ecs" }
rydit-vm = { path = "../rydit-vm" }  # 🆕 v0.11.2: Bytecode VM
lizer = { path = "../lizer" }  # Wrapper backward compat
rydit-lexer = { path = "../rydit-lexer" }  # 🆕 v0.11.2
rydit-parser = { path = "../rydit-parser" }  # 🆕 v0.11.2
v-shield = { path = "../v-shield" }
blast-core = { path = "../blast-core" }
rydit-gfx = { path = "../rydit-gfx" }
migui = { path = "../migui", features = ["sdl2"] }
rydit-stream = { path = "../rydit-stream" }  # 🆕 v0.11.2: LAN streaming
raylib = { version = "5.5.1", default-features = false, features = ["nobuild"] }
gl = "0.14.0"
sdl2 = "0.37"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
csv = "1.3"
ureq = { version = "2.9", features = ["json"] }
tungstenite = "0.21"

[[bin]]
name = "rydit-rs"
path = "src/main.rs"

[[bin]]
name = "demo_stream"
path = "src/bin/demo_stream.rs"
