[package]
name = "rydit-science"
version = "0.7.34"
edition = "2021"
description = "Science module for RyDit - Bezier curves, Statistics, Geometry, Optical illusions"
license = "MIT"
repository = "https://github.com/lapumlbb18-blip/Rydit_Engine"
homepage = "https://github.com/lapumlbb18-blip/Rydit_Engine"
documentation = "https://docs.rs/rydit-science"
readme = "../../README.md"
keywords = ["bezier", "statistics", "geometry", "science", "game-engine"]
categories = ["game-development", "science"]

[dependencies]
rydit-core = { version = "0.8.2", path = "../rydit-core" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
